# milotic

./: .env  .gitignore  1.txt  audio.ipynb  chat_llm.ipynb  database.ipynb  monster.db  pyproject.toml  requirements.txt  test.ipynb  ticket_gen.ipynb  ticket_rec.ipynb  yuyin.ipynb  yuyin.py  zutility.ipynb  录音转文字.xlsx
citra/: chat_llm copy.ipynb  chat_llm.ipynb  chat_with_me.py  smith.ipynb  talk_to_me.py  test.ipynb  tool.ipynb  utility.ipynb  utils.ipynb
citra/audio/: channel.ipynb  rec_audio.ipynb  rec_audio.py
citra/contract/: contract.ipynb  request.json  测试数据.xlsx
citra/mcp/: db_utils.py  outage copy.py  outage.ipynb  query_db.ipynb  query_db.py  tool.py
citra/parse_addr/: parse_addr.ipynb  parse_addr.py
citra/rag/: query_rag.ipynb  query_rag.py  rag_query.ipynb  rag_query.py
citra/review/: contract.ipynb  fault_order.ipynb  test.ipynb
citra/service/: funasr.py  main.py  protocol.py  rag.py  ticket.py
citra/ticket/: generate.py  recoginze.ipynb  recognize.py  regex.py  test.ipynb  test.py  test.txt
citra/utils/: parse_addr.ipynb  parse_addr.py  task1.ipynb  test.py  utility.ipynb
doc/: 录音转文字文档.docx  接口文档.docx
doc/example/: 停电线路缺少电压.json  工作地点缺少电压.json  工作时间不对.json  正确.json  签名少一人.json  签名缺少等字.json
