[project]
name= "WangXiang"
version= "0.1.0"
requires-python= ">=3.12"
description= "created by ice_flower"
dependencies= [
    "dashscope>=1.23.3",
    "fastapi>=0.115.9",
    "langchain>=0.3.25",
    "langchain-chroma>=0.2.4",
    "langchain-community>=0.3.24",
    "langchain-ollama>=0.3.2",
    "openai>=1.78.1",
    "pandas>=2.2.3",
    "pymysql>=1.1.1",
    "python-multipart>=0.0.20",
    "torch>=2.7.0",
    "uvicorn>=0.34.2",
]

[project.optional-dependencies]
asr = [
    "funasr>=1.2.6",
    "pydub>=0.25.1",
]



[tool.ruff]
target-version= "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "B"]

[tool.ruff.format]
quote-style = "single"
line-ending = "lf"

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]

