[project]
name= "flowers"
version= "0.1.0"
requires-python= ">=3.12"
description= "created by ice_flower"
dependencies= [
    "dashscope>=1.23.3",
    "dataframe-image>=0.2.7",
    "fastapi>=0.115.9",
    "fastmcp>=2.7.0",
    "langchain>=0.3.25",
    "langchain-chroma>=0.2.4",
    "langchain-community>=0.3.24",
    "langchain-ollama>=0.3.2",
    "langgraph>=0.4.5",
    "openai>=1.78.1",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pymysql>=1.1.1",
    "python-multipart>=0.0.20",
    "tabulate>=0.9.0",
    "torch>=2.7.0",
    "uvicorn>=0.34.2",
]

[project.optional-dependencies]



[tool.ruff]
target-version= "py312"
line-length = 150

[tool.ruff.lint]
select = ["E", "F", "B","N"]

[tool.ruff.format]
quote-style = "single"
line-ending = "lf"

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "jupytext>=1.17.1",
    "langsmith>=0.3.42",
    "pymupdf>=1.25.5",
]

